feat: add title and filter buttons to the menu section.

--- a/css/main.css
+++ b/css/main.css
@@ -223,3 +223,8 @@ a.navbar-brand {
     height: 500px;
     background-image: url(../img/bg-icons-2.png);
 }
+
+.cardapio {
+    padding-top: 50px;
+    padding-bottom: 150px;
+}
