--- a/css/main.css
+++ b/css/main.css
@@ -627,3 +627,28 @@ footer {
     color: var(--color-primary);
     font-size: 24px;
 }
+
+.form-control {
+    background-color: var(--color-white);
+    color: var(--color-black) !important;
+    border-radius: 20px;
+    padding: 15px 25px;
+    font-size: 20px;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1) !important;
+    border: none !important;
+}
+
+select.form-control {
+    height: 60px !important;
+}
+
+.container-cep .form-control {
+    /* Isso é para o testo não passar por cima do botão do input */
+    padding-right: 75px;
+}
+
+.container-cep .btn {
+    position: absolute;
+    right: 25px;
+    top: 38px;
+}
