--- a/css/main.css
+++ b/css/main.css
@@ -761,6 +761,10 @@ select.form-control {
     background-color: var(--color-green);
 }
 
+.toast.gray {
+    background-color: var(--color-separate);
+}
+
 .carrinho-vazio {
     margin: 0 auto;
     text-align: center;
