--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -46,4 +46,36 @@
     .navbar-collapse .btn-icon span.icon {
         display: none;
     }
+
+    .banner {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .text-banner h1 {
+        font-size: 36px;
+    }
+
+    .text-banner p {
+        font-size: 18px;
+    }
+
+    .btn-yellow, .btn-white {
+        padding: 13px 23px;
+        font-size: 18px;
+    }
+
+    .btn-icon-left span.icon-left {
+        width: 43px;
+        height: 43px;
+        margin-left: -56px;
+    }
+
+    .btn-icon-left {
+        padding-left: 63px !important;
+    }
+
+    .title {
+        font-size: 30px;
+    }
 }
