--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -64,19 +64,29 @@
         font-size: 18px;
     }
 
-    .btn-yellow, .btn-white {
+    .btn-white {
         padding: 8px 18px;
-        font-size: 14px;
+        font-size: 13px;
+        border-radius: 10px !important;
+    }
+
+    .btn-yellow {
+        padding: 8px 18px;
+        font-size: 15px;
+        border-radius: 10px !important;
     }
 
     .btn-icon-left span.icon-left {
-        width: 35px;
-        height: 35px;
-        margin-left: -45px;
+        width: 30px;
+        height: 30px;
+        margin-left: -40px;
+        border-radius: 10px !important;
+        padding-top: 5px !important;
+        margin-top: -6px !important;
     }
 
     .btn-icon-left {
-        padding-left: 55px !important;
+        padding-left: 50px !important;
     }
 
     .title {
@@ -86,5 +96,93 @@
     .btn-social {
         width: 45px !important;
         height: 45 !important;
+        margin-left: ;
+    }
+
+    .btn-social .fa-instagram {
+        margin-left: -1.5px;
+    }
+
+    .servicos {
+        padding-bottom: 50px;
+    }
+
+    .cardapio {
+        padding-bottom: 50px;
+    }
+
+    .container-menu {
+        overflow-x: auto;
+        overflow-y: hidden;
+        display: flex;
+        padding-bottom: 15px;
+    }
+
+    .img-produto {
+        position: absolute;
+        left: 15px;
+    }
+
+    .card-item {
+        height: 110px;
+        padding-left: 110px;
+        justify-content: center;
+        align-items: start;
+    }
+
+    .card-item .img-produto img {
+        width: 80px;
+    }
+
+    .title-produto {
+        margin-top: 0px !important;
+        height: 30px !important;
+        width: 100%;
+        text-align: left !important;
+    }
+
+    .price-produto {
+        margin-bottom: 0px !important;
+        margin-top: 0px !important;
+        font-size: 22px !important;
+    }
+
+    .card-item .add-carrinho {
+        margin-top: 5px;
+    }
+    
+    #itensCardapio .mb-5 {
+        margin-bottom: 15px !important;
+    }
+
+    .depoimentos {
+        padding-bottom: 50px;
+    }
+
+    .reserva {
+        padding-bottom: 50px;
+    }
+
+    .card-secondary {
+        padding: 45px;
+        border-radius: 50px;
+    }
+
+    .card-secondary p {
+        padding-right: 0px !important;
+    }
+
+    .container-logo-footer {
+        justify-content: center;
+    }
+
+    .container-texto-footer p {
+        text-align: center;
+    }
+
+    .container-redes-footer {
+        margin-top: 40px;
+        margin-bottom: 50px;
+        justify-content: center;
     }
 }
